--- a/contenido/contacto.html
+++ b/contenido/contacto.html
@@ -148,7 +148,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     </li>
 
                     <li class="w-100">
-                        <a class="h-100 p-2 d-flex align-items-center" href="Servicios.html">Servicios
+                        <a class="h-100 p-2 d-flex align-items-center" href="servicios.html">Servicios
                             Metalúrgicos</a>
                     </li>
 
