--- a/contenido/nuestra-historia.html
+++ b/contenido/nuestra-historia.html
@@ -129,7 +129,7 @@
                     </li>
 
                     <li class="w-100">
-                        <a class="h-100 p-2 d-flex align-items-center" href="Servicios.html">Servicios
+                        <a class="h-100 p-2 d-flex align-items-center" href="servicios.html">Servicios
                             Metalúrgicos</a>
                     </li>
 
