--- a/contenido/nitrato-de-plata.html
+++ b/contenido/nitrato-de-plata.html
@@ -2,6 +2,19 @@
 <html lang="en">
 
 <head>
+
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NVG7PSHQ');
+    </script>
+    <!-- End Google Tag Manager -->
+
     <meta charset="UTF-8">
     <title>Nitrato de Plata de Alta Pureza para Uso Industrial, Médico y Fotográfico | VALOROS</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +25,7 @@
     <link rel="stylesheet" href="../css/valoros.css" />
     <link rel="icon" href="../img/LogoValoros -icono.ico" />
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11534101242"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11534101242"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
@@ -34,10 +47,18 @@
             });
             return false;
         }
-    </script>
+    </script> -->
 </head>
 
 <body>
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NVG7PSHQ" height="0" width="0"
+            style="display:none;visibility:hidden">
+        </iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <div>
         <input type="checkbox" id="menu-bar" />
@@ -113,11 +134,11 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link fs-5" href="sostenibilidad.html">sostenibilidad</a>
+                    <a class="nav-link fs-5" href="sostenibilidad.html">Sostenibilidad</a>
                 </li>
 
-                <li class="menu-item">
-                    <a class="text-decoration-none text-white" href="contacto.html">Contáctanos</a>
+                <li class="nav-item">
+                    <a class="nav-link fs-5" href="contacto.html">Contáctanos</a>
                 </li>
             </ul>
         </div>
@@ -131,7 +152,7 @@
         <!-- menu:productos-servicios -->
         <section class="p-0 m-0">
             <nav class="p-0 m-0 dark" style="background-color: #1A1A1A;">
-                <ul class="p-0 m-0 w-100">
+                <ul class="p-0 m-0 w-100 text-center">
 
                     <li class="d-flex w-100">
                         <a class="h-100 p-2" href="/#lineaoro"><img src="/img/goldstart.png" alt=""
@@ -144,7 +165,7 @@
                     </li>
 
                     <li class="w-100">
-                        <a class="h-100 p-2 d-flex align-items-center" href="servicios.html">Servicios
+                        <a class="h-100 p-2" href="servicios.html">Servicios
                             Metalúrgicos</a>
                     </li>
 
@@ -460,17 +481,17 @@
     <!-- </div> -->
 
     <!-- boton de whatsapp flotante -->
-    <a href="https://wa.me/+573012784797/?text=Hola, quiero conocer más sobre el oro puro" class="whatsapp-float"
-        target="_blank" aria-label="Chat en WhatsApp">
-        <img src="/img/wpp.png" alt="WhatsApp" width="80" height="80" class="rounded-pill">
+    <a href="https://wa.me/+573012784797/?text=Hola, quiero conocer más sobre el nitrato de plata" class="whatsapp-float"
+        target="_blank" aria-label="Chat en WhatsApp" id="whatsapp-button">
+        <img src="/img/wpp.png" alt="WhatsApp" width="60" height="60" class="rounded-pill">
     </a>
 
-    <script>
+    <!-- <script>
         document.getElementById('whatsapp-button').addEventListener('click', function (e) {
             e.preventDefault(); // Previene que el enlace se abra inmediatamente
             gtag_report_conversion(this.href);
         });
-    </script>
+    </script> -->
     <script src="../js/poductos_rel_carrusel.js"></script>
 </body>
 
