--- a/contenido/contacto.html
+++ b/contenido/contacto.html
@@ -2,6 +2,19 @@
 <html lang="en">
 
 <head>
+
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NVG7PSHQ');
+    </script>
+    <!-- End Google Tag Manager -->
+
     <meta charset="UTF-8">
     <title>Valoros</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,17 +25,17 @@
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11534101242"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11534101242"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'AW-11534101242');
-    </script>
+    </script> -->
     <!-- Event snippet for boton whatsapp conversion page
 In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-    <script>
+    <!-- <script>
         function gtag_report_conversion(url) {
             var callback = function () {
                 if (typeof (url) != 'undefined') {
@@ -35,11 +48,19 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             });
             return false;
         }
-    </script>
+    </script> -->
 
 </head>
 
 <body>
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NVG7PSHQ" height="0" width="0"
+            style="display:none;visibility:hidden">
+        </iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <!-- aside oculto -->
     <div>
@@ -50,7 +71,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
                 <li class="menu-item m-2">
                     <a class="text-decoration-none" href="/">Inicio</a>
-                </li> 
+                </li>
                 <li class="menu-item m-2">
                     <a class="text-decoration-none" href="corporativo.html">Nuestra historia</a>
                 </li>
@@ -76,7 +97,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     </div>
     <!-- fin aside oculto -->
 
-    <div class="container p-0 bg-light">
+    <div class="p-0 bg-light">
 
         <!-- logo-menu -->
         <header class="d-flex justify-content-between m-0 p-0">
@@ -102,29 +123,29 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     </li> -->
 
                     <li class="has-submenu" style="position: relative;">
-                    <a class="nav-link fs-5 d-flex" href="#">Nosotros
-                        <i class='bx bx-chevron-down fs-2'></i>
-                    </a>
-                    <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
-                        <li>
-                            <a class="nav-link" href="nuestra-historia.html">Nuestra historia</a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="corporativo.html">Corporativo</a>
-                        </li>
-                    </ul>
-                </li>
+                        <a class="nav-link fs-5 d-flex" href="#">Nosotros
+                            <i class='bx bx-chevron-down fs-2'></i>
+                        </a>
+                        <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
+                            <li>
+                                <a class="nav-link" href="nuestra-historia.html">Nuestra historia</a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="corporativo.html">Corporativo</a>
+                            </li>
+                        </ul>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link fs-5" href="sostenibilidad.html">sostenibilidad</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-5" href="sostenibilidad.html">Sostenibilidad</a>
+                    </li>
 
-                <li class="menu-item">
-                    <a class="text-decoration-none text-white" href="contacto.html">Contáctanos</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-5" href="contacto.html">Contáctanos</a>
+                    </li>
                 </ul>
             </div>
         </header>
@@ -133,26 +154,26 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <main class="mx-auto">
 
             <!-- menu:productos-servicios -->
-            <section class="p-0 m-0">
+            <section class=" p-0 m-0">
                 <nav class="p-0 m-0 dark" style="background-color: #1A1A1A;">
-                    <ul class="p-0 m-0 w-100">
+                    <ul class="p-0 m-0 w-100 text-center">
 
-                    <li class="d-flex w-100">
-                        <a class="h-100 p-2" href="/#lineaoro"><img src="/img/goldstart.png" alt=""
-                                style="width: 30px;height: 30px;">&nbsp;&nbsp; Linea de Oro</a>
-                    </li>
+                        <li class="d-flex w-100">
+                            <a class="h-100 p-2" href="/#lineaoro"><img src="/img/goldstart.png" alt=""
+                                    style="width: 30px;height: 30px;">&nbsp;&nbsp; Linea de Oro</a>
+                        </li>
 
-                    <li class="d-flex w-100">
-                        <a class="h-100 p-2" href="/#lineaplata"><img src="/img/silverstart.png" alt=""
-                                style="width: 30px;height: 30px;"> Linea de Plata</a>
-                    </li>
+                        <li class="d-flex w-100">
+                            <a class="h-100 p-2" href="/#lineaplata"><img src="/img/silverstart.png" alt=""
+                                    style="width: 30px;height: 30px;"> Linea de Plata</a>
+                        </li>
 
-                    <li class="w-100">
-                        <a class="h-100 p-2 d-flex align-items-center" href="servicios.html">Servicios
-                            Metalúrgicos</a>
-                    </li>
+                        <li class="w-100">
+                            <a class="h-100 p-2" href="servicios.html">Servicios
+                                Metalúrgicos</a>
+                        </li>
 
-                </ul>
+                    </ul>
                 </nav>
             </section>
             <!-- fin menu:productos-servicios -->
@@ -178,14 +199,27 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                             </div>
 
                             <div class="mb-3">
+                                <label for="email">Tel&eacute;fono</label>
+                                <input class="form-control" type="tel" name="telefono" value="" id="telefono">
+                            </div>
+
+                            <div class="mb-3">
+                                <label class="d-block" for="telefono">Tel&eacute;fono</label>
+                                <input class="w-100 rounded p-2 bg-secondary text-white" type="tel" id="telefono"
+                                    name="telefono" placeholder="Ingrese su tel&eacute;fono">
+                            </div>
+
+                            <!-- <div class="mb-3">
                                 <label for="asunto">Asunto</label>
                                 <input class="form-control" type="text" name="asunto" value="" id="Asunto">
-                            </div>
+                            </div> -->
 
                             <div class="mb-3">
                                 <label for="mensaje">Mensaje</label>
                                 <textarea class="form-control" id="mensaje" name="mensaje" rows="3"></textarea>
                             </div>
+
+                            <input type="hidden" name="_next" value="https://valoros.co/thanks.html">
 
                             <input type="submit" class="btn btn-warning" value="Enviar">
                             <input type="hidden" name="_subject" value="Mensaje desde valoros.co">
@@ -275,12 +309,19 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         </footer>
 
     </div>
-    <script>
+
+    <!-- boton de whatsapp flotante -->
+    <a href="https://wa.me/+573012784797/?text=Hola, quiero conocer más sobre el anodo de plata" class="whatsapp-float"
+        target="_blank" aria-label="Chat en WhatsApp" id="whatsapp-button">
+        <img src="/img/wpp.png" alt="WhatsApp" width="60" height="60" class="rounded-pill">
+    </a>
+    
+    <!-- <script>
         document.getElementById('whatsapp-button').addEventListener('click', function (e) {
             e.preventDefault(); // Previene que el enlace se abra inmediatamente
             gtag_report_conversion(this.href);
         });
-    </script>
+    </script> -->
     <!-- <script src="../js/bootstrap.bundle.min.js"></script> -->
 </body>
 
