--- a/thanks.html
+++ b/thanks.html
@@ -11,50 +11,6 @@
     <link rel="stylesheet" href="../css/valoros.css" />
     <link rel="icon" href="../img/LogoValoros -icono.ico" />
 
-    <style>
-        /* body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 60px 20px;
-            background-color: #f9f9f9;
-        } */
-
-        /* .thank-you {     
-            padding: 40px;
-            border-radius: 8px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);   
-            height: 80%;         
-        }
-
-        h1 {
-            color: gold;
-        }
-
-        p {
-            font-size: 18px;
-            color: white;
-        }
-
-        .btn {
-            margin-top: 20px;
-            display: inline-block;
-            padding: 12px 24px;
-            font-size: 16px;
-            color: white;
-            background-color: #007bff;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-
-        .btn:hover {
-            background-color: #0056b3;
-        } */
-    </style>
-
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -137,11 +93,11 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link fs-5" href="sostenibilidad.html">sostenibilidad</a>
+                    <a class="nav-link fs-5" href="sostenibilidad.html">Sostenibilidad</a>
                 </li>
 
-                <li class="menu-item">
-                    <a class="text-decoration-none text-white" href="contacto.html">Contáctanos</a>
+                <li class="nav-item">
+                    <a class="nav-link fs-5" href="contacto.html">Contáctanos</a>
                 </li>
             </ul>
         </div>
@@ -153,7 +109,7 @@
         <!-- menu:productos-servicios -->
         <section class="p-0 m-0">
             <nav class="p-0 m-0 dark" style="background-color: #1A1A1A;">
-                <ul class="p-0 m-0 w-100">
+                <ul class="p-0 m-0 w-100 text-center">
 
                     <li class="d-flex w-100">
                         <a class="h-100 p-2" href="/#lineaoro"><img src="/img/goldstart.png" alt=""
@@ -166,7 +122,7 @@
                     </li>
 
                     <li class="w-100">
-                        <a class="h-100 p-2 d-flex align-items-center" href="servicios.html">Servicios
+                        <a class="h-100 p-2" href="servicios.html">Servicios
                             Metalúrgicos</a>
                     </li>
 
@@ -212,13 +168,6 @@
         </div>
     </footer>
 
-    <!-- </div> -->
-    <script>
-        document.getElementById('whatsapp-button').addEventListener('click', function (e) {
-            e.preventDefault(); // Previene que el enlace se abra inmediatamente
-            gtag_report_conversion(this.href);
-        });
-    </script>
     <!-- <script src="../js/bootstrap.bundle.min.js"></script> -->
 </body>
 
